adjust root for setup file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ dependencies = [
 dynamic = ["version"]
 
 [tool.setuptools_scm]
-root="../.."
+#root="../.."
 version_scheme = "post-release"
 local_scheme = "node-and-date"
-#write_to = "lib/iotknit/pkg/_version.py"
+write_to = "pkg/_version.py"
